--- a/Docker/Demo's/HappySundayContainer/index.html
+++ b/Docker/Demo's/HappySundayContainer/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Running!</title>
-    <style type="text/css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Sunday</title>
+    <style>
         body {
-            width: 100%;
-            min-height: 100%;
-            background: linear-gradient(to bottom, #fff 0, #b8edff 50%, #83dfff 100%);
-            background-attachment: fixed;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f3f4f6;
+            font-family: 'Arial', sans-serif;
+        }
+
+        .message {
+            font-size: 2em;
+            padding: 20px;
+            background: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+            border: 1px solid #eee;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            animation: appear 2s ease-out forwards, float 6s ease-in-out infinite;
+        }
+
+        @keyframes appear {
+            0% { transform: translateY(50px); opacity: 0; }
+            100% { transform: translateY(0px); opacity: 1; }
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
         }
     </style>
 </head>
-<body class=" hasGoogleVoiceExt">
-<div align="center">
-    <h1>Your container is running!</h1>
-    <img src="./docker.png" alt="docker">
-</div>
+<body>
+    <div class="message">
+        Happy Sunday!
+    </div>
 </body>
 </html>
